# Admin8.2.1

./: CMakeLists.txt  README.md  main.cpp  nlp_api.cpp  nlp_api.h  types.hpp
.github/workflows/: ci.yml
core/: ContextualCorrelator.cpp  ContextualCorrelator.h  Learning.cpp  Learning.h  word.cpp  word.hpp
db/: db_manager.cpp  db_manager.hpp  dialogue_repository.cpp  dialogue_repository.hpp  pattern_repository.cpp  pattern_repository.hpp  sentence_repository.cpp  sentence_repository.hpp  word_repository.cpp  word_repository.hpp
dialogue/: PatternCorrelator.cpp  PatternCorrelator.h  dialogue.cpp  dialogue.hpp  pattern.cpp  pattern.hpp
nlp/: classifier.cpp  classifier.hpp  morphology.cpp  morphology.hpp
test/: CMakeLists.txt  test_classifier.cpp  test_contextual_correlator.cpp  test_dialogue.cpp  test_integration.cpp  test_morphology.cpp  test_pattern_correlator.cpp  test_repositories.cpp  test_tokenizer.cpp  test_utils.cpp
tokenizer/: tokenizer.cpp  tokenizer.hpp
utils/: PatternUtils.cpp  PatternUtils.h  classifierUtils.hpp  string_conv.cpp  string_conv.hpp  tag_stats.cpp  tag_stats.hpp
